--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo-container"><h1 class="logo">STREAMLINE</h1></div>
         <div class="menu-container">
             <ul class="menu-list">
-                <li class="menu-list-item active">Home</li>
+                <li class="menu-list-item active">HOME</li>
                 <li class="menu-list-item">WATCH</li>
                 <li class="menu-list-item">RESULTS</li>
                 <li class="menu-list-item">Popular</li>
