--- a/signup.html
+++ b/signup.html
@@ -47,10 +47,11 @@
               <i class="fas fa-user"></i>
               <input type="text" placeholder="Username" />
             </div>
-            <div class="input-field">
+            
+            <!-- <div class="input-field">
               <i class="fas fa-envelope"></i>
               <input type="email" placeholder="Email" />
-            </div>
+            </div> -->
             <div class="input-field">
               <i class="fas fa-phone"></i>
               <input type="email" placeholder="Phone Number" />
