--- a/signup.html
+++ b/signup.html
@@ -18,14 +18,14 @@
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-phone"></i>
-              <input type="text" placeholder="Phone Number" />
+              <input id="loginemail" type="text" placeholder="Phone Number" value=""/>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input id="loginpassword" type="password" placeholder="Password" value="" />
             </div>
-            <button class="btn">
-              <a href="index.html">Sign up</a>
+            <button class="btn" onclick="loginbutton()">
+              Sign In
             </button>
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
