--- a/intl.html
+++ b/intl.html
@@ -29,7 +29,7 @@
             </div>
 
             <button class="btn">
-              <a href="index.html">Sign up</a>
+              <a href="index.html">Sign In</a>
             </button>
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
@@ -120,12 +120,35 @@
     </div>
 
     <script src="signup.js"></script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDyhvRMGkzlhukXDExL5RBpZhD-kLAqjJU",
+    authDomain: "streamline-409af.firebaseapp.com",
+    projectId: "streamline-409af",
+    storageBucket: "streamline-409af.appspot.com",
+    messagingSenderId: "1091424665067",
+    appId: "1:1091424665067:web:e28ec393c2a61d97edadae"
+  }; 
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
+  </script>
   </body>
 </html>
 
 
-<script src="./countries/js/intlTelInput.js"></script>
+
+
+
+<!-- <script src="./countries/js/intlTelInput.js"></script>
 <script>
     var input = document.querySelector("#number");
     window.intlTelInput(input,{});
-</script>
+</script> -->
