--- a/admin.html
+++ b/admin.html
@@ -119,7 +119,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td>nduemmanuel@gmail.com.com</td>
+        <td>nduemmanuel@gmail.com</td>
         <td>
           <input type="password" value="password1" disabled>
         </td>
