--- a/intl.html
+++ b/intl.html
@@ -60,15 +60,15 @@
             </div>
             <div class="input-field">
               <i class="fas fa-phone"></i>
-              <input type="number" placeholder="Phone Number" />
+              <input type="text" placeholder="Phone Number" />
             </div>
             
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" />
             </div>
-            <button class="btn">
-              <a href="index.html">Sign up</a>
+            <button class="btn" id="sign-up">
+              Sign up
             </button>
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
