--- a/signup.html
+++ b/signup.html
@@ -24,8 +24,8 @@
               <i class="fas fa-lock"></i>
               <input id="loginpassword" type="password" placeholder="Password" value="" />
             </div>
-            <button class="btn" onclick="loginbutton()">
-              Sign In
+            <button class="btn">
+             <a href="index.html"></a> Sign In
             </button>
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
@@ -50,10 +50,10 @@
               <input type="text" placeholder="Username" />
             </div>
             
-            <!-- <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
-            </div> -->
+            <div class="input-field">
+              <i class="fa-regular fa-flag"></i>
+              <input type="country" placeholder="Country" />
+            </div>
             <div class="input-field">
               <i class="fas fa-phone"></i>
               <input type="email" placeholder="Phone Number" />
@@ -63,8 +63,8 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" />
             </div>
-            <button class="btn">
-              <a href="index.html">Sign up</a>
+            <button class="btn" id="sign-up">
+              Sign up
             </button>
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
