--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Steamline</title>
+    <title>FunOylmpics</title>
 </head>
 <body>
   <div class="navbar">
     <div class="navbar-container">
-        <div class="logo-container"><h1 class="logo">STREAMLINE</h1></div>
+        <div class="logo-container"><h1 class="logo">FUNOLYMPICS</h1></div>
         <div class="menu-container">
             <ul class="menu-list">
                 <li class="menu-list-item active">HOME</li>
@@ -106,7 +106,7 @@
                         <img class="movie-list-item-img" src="images/ivo:saudi.jpeg" alt="">
                         <span class="movie-list-item-title">Ivory Coast vs Saudi Arabia</span>
                         <p class="movie-list-item-desc">Upcoming match</p>
-                        <button class="movie-list-item-button">Schedule to watch</button>
+                       button < class="movie-list-item-button">Schedule to watch</button>
                     </div>
                 </div>
 
