--- a/signup.html
+++ b/signup.html
@@ -14,18 +14,18 @@
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
+          <form class="sign-in-form">
             <h2 class="title">Sign in</h2>
             <div class="input-field">
-              <i class="fas fa-phone"></i>
-              <input id="loginemail" type="text" placeholder="Phone Number" value=""/>
+              <i class="fas fa-user"></i>
+              <input type="text" id="loginemail" placeholder="Username" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input id="loginpassword" type="password" placeholder="Password" value="" />
             </div>
-            <button class="btn">
-             <a href="index.html"></a> Sign In
+            <button class="btn loginbtn">
+             Sign In
             </button>
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
@@ -90,8 +90,7 @@
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
+              WELCOME
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
